# hikari-kumo

./: .gitignore  README.md  pyproject.toml
src/kumo/: context.py  exceptions.py  metadata.py  traits.py
src/kumo/commands/: __init__.py  base.py  decorators.py  exceptions.py  metadata.py  options.py  traits.py  types.py  utils.py
src/kumo/events/: __init__.py  base_events.py  commands_events.py  interaction_events.py
src/kumo/i18n/: localized.py  types.py
src/kumo/i18n/abc/: __init__.py  ilocalization_provider.py
src/kumo/impl/: command_builder.py  command_handler.py  gateway_bot.py
src/kumo/internal/: consts.py
