[project]
name = "hikari-kumo"
version = "0.1.0"
description = "A flexible and efficient framework for building Discord bots with Hikari, designed for seamless integration and performance."
readme = "README.md"
authors = [
    { name = "stefanlight8", email = "64615032+stefanlight8@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = ["attrs<25", "hikari>=2.0.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
